fixed carousel alignment

--- a/public/src/App.css
+++ b/public/src/App.css
@@ -1,7 +1,3 @@
-/* body {
-	background: linear-gradient(to left, #2c5364, #0f2027);
-} */
-
 .home {
 	background: linear-gradient(to left, #2c5364, #0f2027);
 	background-size: cover;
