--- a/public/src/components/AnnouncementBanner.module.css
+++ b/public/src/components/AnnouncementBanner.module.css
@@ -20,9 +20,10 @@
 }
 
 .carousel {
-	overflow: hidden;
 	width: 700px;
 	display: flex;
+	flex-wrap: nowrap;
+	overflow: hidden;
 	flex-direction: column;
 	justify-content: center;
 }
@@ -39,6 +40,8 @@
 	justify-content: center;
 	height: 250px;
 	background-color: #91a0a1;
+	min-width: 100%;
+	width: 100%;
 }
 
 /* .carouselItem::after {
